# no-more-secrets-python

./: .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  strcut.json
.github/workflows/: ci.yml
docs/: api.md  contributing.md  index.md
no_more_secrets/: __init__.py
no_more_secrets/cli/: __init__.py  main.py  sneakers.py
no_more_secrets/core/: __init__.py  char_attr.py  charset.py  colors.py  terminal.py
no_more_secrets/effects/: __init__.py  nms_effect.py
no_more_secrets/utils/: __init__.py  ansi.py  encoding.py  input_handler.py
tests/: __init__.py  test_ansi.py  test_basic.py  test_colors.py  test_encoding.py  test_nms_effect.py  test_terminal.py
